--- a/Sportivo/Home View controller/view controllers/HomeCell/HomeCollectionViewCell.xib
+++ b/Sportivo/Home View controller/view controllers/HomeCell/HomeCollectionViewCell.xib
@@ -19,18 +19,18 @@
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="iLH-SN-YMI">
                         <rect key="frame" x="0.0" y="0.0" width="243" height="192"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="K0r-OV-xR4">
-                                <rect key="frame" x="0.0" y="0.5" width="243" height="152.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="K0r-OV-xR4">
+                                <rect key="frame" x="0.0" y="0.5" width="243" height="166"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WdQ-h0-MmV">
-                                <rect key="frame" x="0.0" y="153.5" width="243" height="38.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="0.0" y="167" width="243" height="25"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                 <color key="textColor" red="0.21568627450980393" green="0.59999999999999998" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="K0r-OV-xR4" firstAttribute="height" secondItem="iLH-SN-YMI" secondAttribute="height" multiplier="0.8" id="n2q-6a-0bm"/>
+                            <constraint firstItem="K0r-OV-xR4" firstAttribute="height" secondItem="iLH-SN-YMI" secondAttribute="height" multiplier="0.87" id="n2q-6a-0bm"/>
                         </constraints>
                     </stackView>
                 </subviews>
