--- a/Sportivo/CompositionalLeague/ViewControllers/Compositional.xib
+++ b/Sportivo/CompositionalLeague/ViewControllers/Compositional.xib
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Compositional" customModule="NibForProject" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Compositional" customModule="Sportivo" customModuleProvider="target">
             <connections>
                 <outlet property="CollectionView" destination="tTr-Zm-fmk" id="8Dv-0Q-6FN"/>
+                <outlet property="loader" destination="s81-Dd-Xce" id="Dqu-22-GRh"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="tTr-Zm-fmk">
-                    <rect key="frame" x="0.0" y="118" width="393" height="666"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="L1M-D1-m6s">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -28,13 +29,23 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s81-Dd-Xce" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
+                    <rect key="frame" x="157" y="398" width="100" height="100"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="4Jk-Zc-cCW"/>
+                        <constraint firstAttribute="width" constant="100" id="94a-1F-YpO"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="tTr-Zm-fmk" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="8ec-Mh-eW4"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="tTr-Zm-fmk" secondAttribute="trailing" id="QAY-8J-Ayr"/>
+                <constraint firstItem="s81-Dd-Xce" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="RAW-3m-NGd"/>
                 <constraint firstItem="tTr-Zm-fmk" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="StT-29-tV7"/>
+                <constraint firstItem="s81-Dd-Xce" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="bng-o3-vov"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="tTr-Zm-fmk" secondAttribute="bottom" id="kVL-6o-Slf"/>
             </constraints>
             <point key="canvasLocation" x="71" y="-11"/>
